fixing text on chapter promos to align right

--- a/css/main.sass
+++ b/css/main.sass
@@ -606,8 +606,12 @@ a.post-overlay
   .post-header
     .post-title
       position: absolute
-      bottom: 35%
-      right: 7%
+      text-align: right
+      top: 20%
+      right: 6%
+      max-width: 392px
+      padding: 0
+      margin: 0
 .post-overlay:hover
   & span.overlay
     opacity: 1
